syntax = "proto3";
package g4alentertainment.g4alchain.permission;

import "g4alchain/permission/administrator.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/G4AL-Entertainment/g4al-chain/x/permission/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateAdministrator(MsgCreateAdministrator) returns (MsgCreateAdministratorResponse);
  rpc UpdateAdministrator(MsgUpdateAdministrator) returns (MsgUpdateAdministratorResponse);
  rpc DeleteAdministrator(MsgDeleteAdministrator) returns (MsgDeleteAdministratorResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateAdministrator {
  string creator = 1;
  string address = 2;

  int32 createdAt = 3;
  int32 updatedAt = 4;
  bool blocked = 5;
}
message MsgCreateAdministratorResponse {}

message MsgUpdateAdministrator {
  string creator = 1;
  string address = 2;

  int32 createdAt = 3;
  int32 updatedAt = 4;
  bool blocked = 5;
}
message MsgUpdateAdministratorResponse {}

message MsgDeleteAdministrator {
  string creator = 1;
  string address = 2;
}
message MsgDeleteAdministratorResponse {}

// this line is used by starport scaffolding # proto/tx/message
